# remarkable

./: CMakeLists.txt  dconfig
Analyzer_Interface/: CMakeLists.txt
Analyzer_Interface/autotests/: CMakeLists.txt  testMemoryFile.cpp
Analyzer_Interface/src/: Calibration3DCoordsLoader.cpp  calibration3DCoords.cpp
App_GrabberGigE/src/: camera.cpp  camera.h
App_Gui/: CMakeLists.txt
App_Gui/autotests/: testAssemblyImageFromProductInstanceTableModel.cpp
App_Gui/plugins/general/: CMakeLists.txt  generateSystemConfiguration.sh
App_Gui/plugins/postProcessing/: CMakeLists.txt  abstractModule.cpp  abstractModule.h  main.cpp  postProcessing.cpp  postProcessing.h  postProcessingController.cpp  postProcessingController.h  postProcessingSequenceDataReady.cpp  postProcessingSequenceDataReady.h  postProcessingThreadControl.cpp  postProcessingThreadControl.h  postProcessingTriggerServer.cpp  postProcessingTriggerServer.h
App_Gui/src/: SettingNameFilterModel.cpp  SettingNameFilterModel.h  abstractModule.cpp  abstractModule.h  abstractSingleSeamDataModel.cpp  abstractSingleSeamDataModel.h  assemblyImageFromProductInstanceTableModel.cpp  assemblyImageInspectionModel.cpp  detectionController.cpp  detectionController.h  deviceKeyModel.cpp  errorsDataModel.cpp  hardwareParameters.cpp  ledCalibrationController.cpp  ledChannel.cpp  ledChannel.h  main.cpp  postProcessingController.cpp  postProcessingController.h  postProcessingModule.cpp  postProcessingModule.h  postProcessingSequenceDataReady.cpp  postProcessingSequenceDataReady.h  postProcessingTriggerServer.cpp  postProcessingTriggerServer.h  productController.cpp  productController.h  resultSettingFilterModel.cpp  simulationModule.cpp  simulationModule.h
App_InspectionControl/: AppMain.cpp  AppMain.h  CMakeLists.txt
App_InspectionControl/postprocessing/: AppMain.cpp  AppMain.h
App_Simulation/: commandServer.cpp
App_Simulation/include/: commandServer.h
App_Storage/src/: module.cpp  module.h  storageUpdateServer.cpp
ConnectServer/: AsyncSystemStarter.cpp
Filter_GapTracking/: GapPosRefine1.cpp  HeightDifference.cpp  Mismatch1.cpp  TCPDistance.cpp
Filter_ImageProcessing/: parallelLocalExtremum.cpp  templateMatching.cpp
Filter_LineGeometry/: computeAngle.cpp
Filter_Utility/: CMakeLists.txt  functionGenerator.cpp  functionGenerator.h  luaInterpreter.cpp  luaInterpreter.h  manifest.cpp  valueFromCSVFile.cpp  valueFromCSVFile.h
Filter_Utility/autotests/: CMakeLists.txt  testLuaInterpreter.cpp  valueFromCSVFileTest.cpp
Filter_Utility/autotests/testData/: valueFromCSVFile_comment.csv  valueFromCSVFile_decimal_comma.csv  valueFromCSVFile_doubles.csv  valueFromCSVFile_doubles_with_spaces.csv  valueFromCSVFile_line_too_long.csv  valueFromCSVFile_line_too_short.csv  valueFromCSVFile_semicolon_separated.csv  valueFromCSVFile_strings.csv  valueFromCSVFile_tab_separated.csv
Filter_Utility/lua/: Readme.md  luaApi.cpp  luaApi.h  luaCanvas.cpp  luaCanvas.h  luaConstants.cpp  luaConstants.h  luaContext.cpp  luaContext.h  luaData.h  luaFrame.h  luaGeo.h  luaImage.cpp  luaImage.h  luaLine.cpp  luaLine.h  luaMath.cpp  luaMath.h  luaRef.h  luaScalar.cpp  luaScalar.h  luaSingleton.h  luaVal.h
Framework_Module/src/: moduleManagerConnector.cpp
Mod_Analyzer/: CMakeLists.txt
Mod_Analyzer/autotests/: CMakeLists.txt  testSumError.cpp
Mod_Analyzer/include/analyzer/: AnalysisSumError.h  LevelTwoError.h  SignalSumError.h  referenceCurves.h  sumError.h
Mod_Analyzer/src/: AnalysisSumErrorAccumulatedOutlier.cpp  AnalysisSumErrorSingleOutlier.cpp  LevelTwoError.cpp  SignalSumError.cpp  SignalSumErrorAccumulatedOutlier.cpp  SignalSumErrorDualOutlierInRange.cpp  SignalSumErrorSingleOutlier.cpp  signalAdapter.cpp
Mod_CHRCommunication/src/: CHRCommunication.cpp
Mod_Calibration/src/: calibrateScanField.cpp
Mod_GrabberNoHw/src/: sequenceInformation.cpp  triggerServerNoHw.cpp
Mod_InspectionControl/: CMakeLists.txt
Mod_InspectionControl/autotests/: CMakeLists.txt
Mod_InspectionControl/include/viInspectionControl/: TCPClientLWM.h  VI_InspectionControl.h  dbNotificationServer.h  storageUpdateServer.h
Mod_InspectionControl/include/viInspectionControl/postProcessing/: postProcessingController.h  postProcessingSequenceDataReady.h  postProcessingTriggerServer.h
Mod_InspectionControl/src/: ControlSimulationServer.cpp  TCPClientLWM.cpp  VI_InspectionControl.cpp  dbNotificationsServer.cpp  storageUpdateServer.cpp
Mod_InspectionControl/src/postprocessing/: postProcessingController.cpp  postProcessingSequenceDataReady.cpp  postProcessingTriggerServer.cpp
Mod_ModuleManager/src/: mmAccessor.cpp  paired.cpp  receptor.server.cpp  registrar.server.cpp
Mod_Scheduler/src/: abstractTrigger.cpp  manualTrigger.cpp  resultExcelFileFromProductInstanceTask.cpp  taskScheduler.cpp  transferDirectoryTask.cpp  transferFileTask.cpp  transferMetaDataTask.cpp  triggerFactory.cpp
Mod_Storage/: CMakeLists.txt
Mod_Storage/autotests/: testProductInstanceModel.cpp  testProductInstanceTableModel.cpp
Mod_Storage/src/: abstractMeasureTask.h  attribute.cpp  attributeModel.cpp  jsonSupport.cpp  parameter.cpp  parameter.h  productInstanceDownloadHelper.cpp  productInstanceDownloadHelper.h  productInstanceModel.cpp  productInstanceModel.h  productInstanceTableModel.cpp  productInstanceTableModel.h  resultsStorageService.cpp
Mod_TCPCommunication/src/: TCPClientSRING.cpp
Mod_VideoRecorder/src/: commandProcessor.cpp  fileCommand.cpp  literal.cpp  parameter.cpp  writer.cpp
Mod_WeldHeadControl/: CMakeLists.txt
Mod_WeldHeadControl/autotests/: CMakeLists.txt  lensModelTest.cpp  smartMoveControlTest.cpp  smartMoveInterpreterTest.cpp
Mod_WeldHeadControl/src/: WeldingHeadControl.cpp  deviceServer.cpp
wm_inst/: CMakeLists.txt  output_Simulation.txt  output_Standalone.txt
(+261 files in other folders)
